[gd_scene load_steps=26 format=3 uid="uid://c63likdbxoa73"]

[ext_resource type="Script" path="res://scripts/pet_level.gd" id="1_2rqs3"]
[ext_resource type="Texture2D" uid="uid://cu88kjpg50q8d" path="res://assets/worlds_objects/Space_Stars2.png" id="2_nhpud"]
[ext_resource type="Texture2D" uid="uid://dhlca2v0865bj" path="res://assets/sounds/UI/ButtonBackground_Hover.png" id="3_oijba"]
[ext_resource type="PackedScene" uid="uid://d1khwm35amnmx" path="res://scenes/character_base.tscn" id="4_edk6u"]
[ext_resource type="Texture2D" uid="uid://c0vwno60s1gle" path="res://assets/sounds/UI/healthbar_back.png" id="5_2nylg"]
[ext_resource type="Script" path="res://scripts/Evolution1Bar.gd" id="5_iia7i"]
[ext_resource type="FontFile" uid="uid://psucj3rikhfu" path="res://assets/Fonts/SpiritsRegular-OEKo.ttf" id="6_c4f3s"]
[ext_resource type="Script" path="res://scripts/Evolution2.gd" id="6_qctny"]
[ext_resource type="StyleBox" uid="uid://1w14wqut0rd" path="res://Themes/ButtonNormal.tres" id="7_lkwpl"]
[ext_resource type="AudioStream" uid="uid://c02tq3ecvxon5" path="res://assets/sounds/MoneySpentSound.mp3" id="7_r2dbu"]
[ext_resource type="AudioStream" uid="uid://cmv1rt1fes7at" path="res://assets/sounds/EvolveMenuSound.mp3" id="7_vwov3"]
[ext_resource type="StyleBox" uid="uid://con1qacn2v0ro" path="res://Themes/ButtonHover.tres" id="8_rcy1e"]
[ext_resource type="StyleBox" uid="uid://b1in0jw7br4kt" path="res://Themes/ButtonDisabled.tres" id="9_d16w1"]
[ext_resource type="Script" path="res://scripts/Buttons.gd" id="9_e5iig"]
[ext_resource type="AudioStream" uid="uid://b2mrvh3owiq1c" path="res://assets/sounds/tap-notification-180637.mp3" id="12_1b6ev"]
[ext_resource type="AudioStream" uid="uid://dxvxp5uidhvdh" path="res://assets/sounds/pop_sound.mp3" id="13_yurhq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aktfk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1tf0u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6dkqy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2dan1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bf5cl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sv806"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rsng4"]

[sub_resource type="Theme" id="Theme_vhcm4"]
default_font = ExtResource("6_c4f3s")
default_font_size = 30

[sub_resource type="Theme" id="Theme_6apcq"]
default_font = ExtResource("6_c4f3s")
default_font_size = 30

[node name="PetLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2rqs3")

[node name="BackgroundLayer2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nhpud")
expand_mode = 2
stretch_mode = 1

[node name="ButtonBackgroundHover" type="Sprite2D" parent="."]
position = Vector2(596, 368)
scale = Vector2(2, 3)
texture = ExtResource("3_oijba")

[node name="CharacterBase" parent="." instance=ExtResource("4_edk6u")]
position = Vector2(597, 366)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthbarBack" type="Sprite2D" parent="UI"]
position = Vector2(150.25, 315)
scale = Vector2(2.18229, 3.46875)
texture = ExtResource("5_2nylg")

[node name="Money" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.6
anchor_right = 0.05
anchor_bottom = 0.6
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("6_c4f3s")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("7_lkwpl")
horizontal_alignment = 1

[node name="CurrentWave" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.7
anchor_right = 0.05
anchor_bottom = 0.7
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("6_c4f3s")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("7_lkwpl")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.05
anchor_right = 0.03
anchor_bottom = 0.05
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("6_c4f3s")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("7_lkwpl")
theme_override_styles/hover = ExtResource("8_rcy1e")
theme_override_styles/pressed = ExtResource("9_d16w1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_aktfk")
text = "Play Again"
script = ExtResource("9_e5iig")

[node name="SizeButton" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.21
anchor_top = 0.05
anchor_right = 0.21
anchor_bottom = 0.05
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("6_c4f3s")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("7_lkwpl")
theme_override_styles/hover = ExtResource("8_rcy1e")
theme_override_styles/pressed = ExtResource("9_d16w1")
theme_override_styles/disabled = ExtResource("9_d16w1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1tf0u")
text = "Increase Speed
15 Points
"
script = ExtResource("9_e5iig")

[node name="HealthButton" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.43
anchor_top = 0.05
anchor_right = 0.43
anchor_bottom = 0.05
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("6_c4f3s")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("7_lkwpl")
theme_override_styles/hover = ExtResource("8_rcy1e")
theme_override_styles/pressed = ExtResource("9_d16w1")
theme_override_styles/disabled = ExtResource("9_d16w1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6dkqy")
text = "Increase Duration
35 Points"
script = ExtResource("9_e5iig")

[node name="WaveSkipButton" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.67
anchor_top = 0.05
anchor_right = 0.67
anchor_bottom = 0.05
offset_right = 288.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("6_c4f3s")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("7_lkwpl")
theme_override_styles/hover = ExtResource("8_rcy1e")
theme_override_styles/pressed = ExtResource("9_d16w1")
theme_override_styles/disabled = ExtResource("9_d16w1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2dan1")
text = "Permanently Skip a Wave
400 Points"
script = ExtResource("9_e5iig")

[node name="RegressButton" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.68
anchor_top = 0.2
anchor_right = 0.68
anchor_bottom = 0.2
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("6_c4f3s")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("7_lkwpl")
theme_override_styles/hover = ExtResource("8_rcy1e")
theme_override_styles/pressed = ExtResource("9_d16w1")
theme_override_styles/disabled = ExtResource("9_d16w1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bf5cl")
text = "Regress Current Wave
Refund 400 Points"
script = ExtResource("9_e5iig")

[node name="FireballButton" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.25
anchor_bottom = 0.2
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("6_c4f3s")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("7_lkwpl")
theme_override_styles/hover = ExtResource("8_rcy1e")
theme_override_styles/pressed = ExtResource("9_d16w1")
theme_override_styles/disabled = ExtResource("9_d16w1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sv806")
text = "Unlock Fireball
200 Points"
script = ExtResource("9_e5iig")

[node name="ShieldButton" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.47
anchor_top = 0.2
anchor_right = 0.47
anchor_bottom = 0.2
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("6_c4f3s")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("7_lkwpl")
theme_override_styles/hover = ExtResource("8_rcy1e")
theme_override_styles/pressed = ExtResource("9_d16w1")
theme_override_styles/disabled = ExtResource("9_d16w1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rsng4")
text = "Unlock Shield
700 Points"
script = ExtResource("9_e5iig")

[node name="Evolution1Vbox" type="VBoxContainer" parent="UI"]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.4
anchor_right = 0.05
anchor_bottom = 0.4
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_vhcm4")

[node name="Progress" type="Label" parent="UI/Evolution1Vbox"]
layout_mode = 2
text = "Progress to 
First Evolution"
horizontal_alignment = 1

[node name="Evolution1" type="ProgressBar" parent="UI/Evolution1Vbox"]
layout_mode = 2
min_value = 300.0
max_value = 850.0
value = 300.0
script = ExtResource("5_iia7i")

[node name="Evolution1Vbox2" type="VBoxContainer" parent="UI"]
visible = false
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.4
anchor_right = 0.05
anchor_bottom = 0.4
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_6apcq")

[node name="Progress" type="Label" parent="UI/Evolution1Vbox2"]
layout_mode = 2
text = "Progress to 
Second Evolution"
horizontal_alignment = 1

[node name="Evolution2" type="ProgressBar" parent="UI/Evolution1Vbox2"]
layout_mode = 2
min_value = 850.0
max_value = 1085.0
value = 850.0
allow_lesser = true
script = ExtResource("6_qctny")

[node name="FireballControls" type="Label" parent="UI"]
offset_left = 62.0
offset_top = 518.0
offset_right = 102.0
offset_bottom = 541.0
theme_override_fonts/font = ExtResource("6_c4f3s")
theme_override_font_sizes/font_size = 30
text = "Fireball = Left Click"

[node name="ShieldControls" type="Label" parent="UI"]
offset_left = 62.0
offset_top = 548.0
offset_right = 102.0
offset_bottom = 571.0
theme_override_fonts/font = ExtResource("6_c4f3s")
theme_override_font_sizes/font_size = 30
text = "Shield = Right Click"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_yurhq")
volume_db = -10.0

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_1b6ev")
volume_db = -10.0
max_polyphony = 5

[node name="EvolveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_vwov3")
volume_db = -10.0

[node name="MoneySpent" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_r2dbu")
volume_db = -10.0

[connection signal="mouse_entered" from="UI/RestartButton" to="UI/RestartButton" method="_on_mouse_entered"]
[connection signal="pressed" from="UI/RestartButton" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="UI/SizeButton" to="UI/SizeButton" method="_on_mouse_entered"]
[connection signal="pressed" from="UI/SizeButton" to="." method="_on_size_button_pressed"]
[connection signal="mouse_entered" from="UI/HealthButton" to="UI/HealthButton" method="_on_mouse_entered"]
[connection signal="pressed" from="UI/HealthButton" to="." method="_on_health_button_pressed"]
[connection signal="mouse_entered" from="UI/WaveSkipButton" to="UI/WaveSkipButton" method="_on_mouse_entered"]
[connection signal="pressed" from="UI/WaveSkipButton" to="." method="_on_wave_skip_button_pressed"]
[connection signal="mouse_entered" from="UI/RegressButton" to="UI/RegressButton" method="_on_mouse_entered"]
[connection signal="pressed" from="UI/RegressButton" to="." method="_on_regress_button_pressed"]
[connection signal="mouse_entered" from="UI/FireballButton" to="UI/FireballButton" method="_on_mouse_entered"]
[connection signal="pressed" from="UI/FireballButton" to="." method="_on_fireball_button_pressed"]
[connection signal="mouse_entered" from="UI/ShieldButton" to="UI/ShieldButton" method="_on_mouse_entered"]
[connection signal="pressed" from="UI/ShieldButton" to="." method="_on_shield_button_pressed"]
